# SAES

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SOFTWARE_X_COMPLIANCE.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pages.yml  publish.yml  release-on-merge.yml  test.yml
SAES/: .gitignore  __main__.py  csv_processor.py  latex_generator.py  logger.py  plots.py  utils.py
SAES/latex_generation/: latex_skeleton.py  latex_tables.py  latex_tables2.py  stats_table.py
SAES/multiobjective/: pareto_front.py  prueba.ipynb
SAES/plots/: CDplot.py  Pplot.py  boxplot.py  critical_distance_plot.py  violin.py
SAES/statistical_tests/: bayesian.py  non_parametrical.py  parametrical.py
SAES/utils/: csv_processor.py  dataframe_processor.py  statistical_checks.py
algorithm_benchmark_toolkit/: csv_processor.py  data.csv  latex_generator.py  metrics.csv  plots.py  stats.py  utils.py
docs/: api.rst  conf.py  index.rst
docs/API/: api.rst  boxplot.rst  checks.rst  critical.rst  csv.rst  latex.rst  latex_tables.rst  plots.rst  stats.rst
docs/configure/: References.rst  configuration.rst  data.rst  metrics.rst
docs/usage/: cd.rst  latex.rst  plot.rst  usage.rst  (+2 more)
examples/: data.csv  example_usage.py  metrics.csv  smoke_test.sh
notebooks/: SAES_tutorial.ipynb  bayesian_posterior.ipynb  boxplot_example.ipynb  data.csv  latex_tables_example.ipynb  metrics.csv  multiobjective_optimization.ipynb  swarmIntelligence.csv
tests/: test_csv_processor.py  test_latex_generator.py  test_plots.py  test_stats.py  test_utils.py
(+28 files in other folders)
